<resources>
    <string name="agora_app_id">65b0af3afe9b455ea928393b32ef5def</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_name">vod</string>
    <string name="hot_listen">热听</string>
    <string name="action_settings">Settings</string>
    <string name="saving_image">save...</string>
    <string-array name="fliters">
        <item>原始</item>
        <item>软化</item>
        <item>黑白</item>
        <item>经典</item>
        <item>华丽</item>
        <item>复古</item>
        <item>优雅</item>
        <item>电影</item>
        <item>回忆</item>
        <item>优格</item>
        <item>流年</item>
        <item>发光</item>
    </string-array>
    <string name="get_main_bitmap_fail">获取底图不成功,重新获取！</string>
    <string name="had_get_image_01">你已经选择了</string>
    <string name="had_get_image_02">张图片，当前视频必须选择10到20张图片。</string>
    <string name="check_image_fail_show">你选取的图片不符合数量。当前视频必须选择10到20张图片。</string>
    <string name="had_choose_image_01">共导入</string>
    <string name="had_choose_image_02">张图片，所有图片都经过裁剪后效果 才最佳。</string>
    <string name="give_up_diy">确认要放弃DIY吗?</string>
    <string name="confirm_give_up">确认放弃</string>
    <string name="champion_singer">冠军歌王</string>
    <string name="runner_up_singer">亚军歌王</string>
    <string name="third_singer">季军歌王</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>
    <string name="login_yihouzhangh">已有账号登录</string>
    <string name="login_zhuche">注册</string>
    <string name="login_zhuche_phone">手机号注册</string>
    <string name="login_zhuche_yzm">填写验证码</string>
    <string name="login_forget_pwd">填写新密码</string>
    <string name="login_denglu">登 录</string>
    <string name="login_exit">退出登录</string>
    <string name="login_done">完 成</string>
    <string name="login_getcheck">获取验证码</string>
    <string name="login_forgetpwd">忘记密码</string>
    <string name="collte_success">收藏成功</string>
    <string name="collte_desc">你可以点击“我”</string>
    <string name="konw">知道了</string>
    <string name="go_look">去看看</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">上拉查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="pref_key_iat_show">iat_show</string>
    <string name="text_begin">请开始说话…</string>
    <string name="app_id">5844e44c</string>
    <string name="settings">设置</string>
    <string name="title_activity_local_music">LocalMusicActivity</string>
    <string name="select_image_title">选择图片(%1$s/%2$s)</string>
    <string name="money">￥</string>
    <string name="duo">朵</string>
    <string name="updata_local_video">上传视频</string>
    <string name="facebook_app_id">487692214752558</string>
    <string name="umeng_share">分享</string>
    <string name="umeng_auth">授权</string>
    <string name="umeng_deleauth">清除对应授权</string>
    <string name="umeng_shake">摇一摇</string>
    <string name="umeng_comment">评论相关</string>
    <string name="umeng_openshare">打开分享面板</string>
    <string name="umeng_openshare_custom">打开自定义分享面板</string>
    <string name="umeng_sharebutton_custom">复制链接</string>
    <string name="umeng_sharebutton_home_page">我的主页</string>
    <string name="umeng_share1">默认分享面板可编辑分享页</string>
    <string name="umeng_share2">自定义分享面板可编辑分享页</string>
    <string name="umeng_share3">单平台直接分享</string>
    <string name="umeng_share4">多平台直接分享</string>
    <string name="umeng_share5">默认分享面板可编辑分享页多平台</string>
    <string name="person_account_cano_getsms">短信验证码已发送至银行预留手机。
\n如未收到：
\n1.请确认当前使用的号码是否为银行预留手机号。
\n2.请检查短信是否被安全软件拦截。</string>
    <string name="person_apply_now">立即申请</string>
    <string name="person_mfz_done">麦分子</string>
    <string name="person_apply_done">您已是麦分子</string>
    <string name="person_apply_about_microphone">什么是「麦分子」？</string>
    <string name="person_apply_about_identification">认证特权</string>
    <string name="person_apply_identification">1.麦分子了可以获得趣唱商城所有商品分销权；
        \n2.麦分子可通过发布原创或者转发作品成为麦商城分店；
        \n3.分店流量在麦商城交易成功后可获得提成；
        \n4.账户余额及时提现；</string>
    <string name="apply_condition">1.年满18周岁；\n 2.级别Lv.3及以上者； \n3.个人资料完整度达100%； \n4.个人主页最少发布一首原创作品或者最少转发三首原创作品；</string>
    <string name="person_apply_about_info">\u3000\u3000级别达到Lv.3以上的趣唱歌友通过实名认证后，即可申请趣唱麦克 风商城的三级分销，认证通过后即可成为麦分子。</string>
    <string name="call_phone">0755-28349477</string>
    <string name="setting_version_content1.1">
\n1、参加歌王PK赛事，获得歌王荣誉，领取超值奖品；
\n2、可录制MP3音频和MV视频歌曲，设置歌词字号、音效、美颜滤镜等功能；
\n3、查看、分享PK赛活动，邀请好友一起拉票助威。</string>
    <string name="setting_version_content1.1.0">
\n1、【优化】PK歌王页面改版；
\n2、【优化】我的主页增加活动分类及活动期数；
\n3、【删减】取消音频录歌；
\n4、【优化】修复已知BUG；</string>
    <string name="setting_version_about_us">\u3000\u3000    PK歌王，是一款专门提供给歌友PK歌曲的手机应用APP。在这里，你可以快速体验时下最流行的K歌综艺节目，与各类节目的歌王进行PK。
    \n\u3000\u3000 在这里，有最实时的PK曲目响应，有最魔力的演唱体验，有最热情忠实的粉丝，更有最惊喜的奖品在等你。
\n
    \n\u3000\u3000 来吧 ，你来了就是歌王！
    \n\n\u3000\u3000【PK歌王】收录的各类音乐、视频及其资料大部分来源用户网络上传，其版权均归原作者及其网站所有。我们一向注重网络版权及用户权益保护，如您认为【PK歌王】上传、传播的视听内容侵犯您的合法权益，请您向我们发出权利通知，我们将根据相关法律规定采取强制措施删除相关内容及其他措施，也可以向我们的邮箱发送通知书。
\nE-mail:technology@quchangkeji.com</string>
    <string name="protocol_daoyu">\u3000\u3000本《趣唱软件许可及服务协议》是您（下称“用户”）与深圳趣唱科技有限公司之间在使用其出品的“趣唱”软件或相关网络服务中注册使用时签署的协议（以下以“趣唱”指代深圳趣唱科技有限公司以及“趣唱”软件）。为使用趣唱软件及服务，您应当阅读并遵守《趣唱软件许可及服务协议》（以下简称“本协议”）。请您务必审慎阅读、充分理解各条款内容，特别是免除或者限制责任的条款，并选择接受或不接受。
除非您已阅读并接受本协议所有条款，否则您无权下载、安装或使用本软件及相关服务。您的下载、安装、使用、获取趣唱帐号、登录等行为即视为您已阅读并同意该协议的约束。
如果您未满18周岁，请在法定监护人的陪同下阅读本协议及其他上述协议，并特别注意未成年人使用条款。</string>
    <string name="protocol_1_1">1.1 【协议适用主体范围】\n
本协议是您与趣唱之间关于您下载、安装、使用本软件，以及趣唱相关服务所订立的协议。</string>
    <string name="protocol_2_1">2.1 【本服务的内容】
本服务内容是指趣唱向用户提供的跨平台的多人实时视频直播、练歌、K歌、歌曲翻唱、跨平台分享原创翻唱作品功能，支持单人、多人参与，在实时K歌、视频直播、视频录制的基础上，同时为用户提供包括但不限于社交关系拓展、活动等功能或内容的软件许可及服务（以下简称“本服务”）。
\n2.2 【本服务的形式】
\n2.2.1 您使用本服务需要下载趣唱客户端软件，对于该软件，趣唱给予您一项个人的、不可转让及非排他性的许可。
\n2.2.2 本服务中趣唱客户端软件提供包括iOS、android两个应用版本，用户必须选择安装与所持有手机相匹配的软件版本。
\n2.3 【本服务许可的范围】
\n2.3.1 趣唱给予您一项个人的、不可转让及非排他性的许可，以使用本软件。您可以为非商业目的在多台终端设备上安装、使用、显示、运行本软件。
\n2.3.2 本条及本协议其他条款未明示授权的其他一切权利仍由趣唱保留，您在行使这些权利时须另外取得趣唱的书面许可。趣唱如果未行使前述任何权利，并不构成对该权利的放弃。
  \n  2.4  【服务收费】
\n2.4.1 趣唱部分服务是以收费方式提供，如您使用收费服务，请遵守相关协议。
\n2.4.2 趣唱可能根据实际需要对收费服务的收费标准、方式进行修改和变更，趣唱也可能对部分免费服务开始收费。上述修改、变更或者开始收费前，趣唱将会在相应服务页面通知或公告，如不同意上述修改、变更或付费内容，则停止使用本服务。</string>
    <string name="protocol_3_1">3.1 保护用户个人信息是趣唱的一项基本原则，趣唱将会采取合理的措施保护用户的个人信息。除法律法规规定的情形外，未经用户许可趣唱不会向第三方公开、透露用户个人信息。趣唱对相关信息采用专业加密存储与传输方式，保障用户个人信息的安全。
\n3.2 您在注册帐号或使用本服务的过程中，需要提供一些必要的信息，例如：为向您提供注册和登录功能，需要您填写第三方账号的账号密码；提供视频申请服务，需要您填写手机号码等。若国家法律法规或政策有特殊规定的，您需要提供真实的身份信息。若您提供的信息不完整，则无法使用本服务或在使用过程中受到限制。
\n3.3 一般情况下，您可随时浏览、修改自己提交的信息，但出于安全性和身份识别的考虑，您可能无法修改某些特定验证信息。
\n3.4 趣唱将运用各种安全技术和程序建立完善的管理制度来保护您的个人信息，以免遭受未经授权的访问、使用或披露。
\n3.5 未经您的同意，趣唱不会向趣唱以外的任何公司、组织和个人披露您的个人信息，但法律法规另有规定的除外。
\n3.6 趣唱非常重视对未成年人个人信息的保护。若您是18周岁以下的未成年人，在使用趣唱的服务前，应事先取得您家长或法定监护人的书面同意。</string>
    <string name="protocol_4_1">4.1 您在使用本服务前需要注册一个趣唱帐号。趣唱有权根据用户需求或产品需要对帐号注册和绑定的方式进行变更。
\n4.2 趣唱帐号的所有权归趣唱公司所有，用户完成注册手续后，仅获得趣唱帐号的使用权，且该使用权仅属于初始申请注册人。同时，初始申请注册人不得赠与、借用、租用、转让或售卖趣唱帐号或者以其他方式许可非初始申请注册人使用趣唱帐号。非初始申请注册人不得通过受赠、继承、承租、受让或者其他任何方式使用趣唱账号。
\n4.3 用户有责任妥善保管注册帐户信息及帐户密码的安全，用户需要对注册帐户以及密码下的行为承担法律责任。用户同意在任何情况下不向他人透露帐户及密码信息。当在您怀疑他人在使用您的帐号时，请及时修改账户密码，如有需要请立即通知趣唱公司。
\n4.4因您保管不善可能导致遭受盗号或密码失窃，责任由您自行承担。</string>
    <string name="protocol_5_3">5.1 您可以直接从趣唱的网站上获取本软件，也可以从得到趣唱授权的第三方获取。
\n5.2 如果您从未经趣唱授权的第三方获取本软件或与本软件名称相同的安装程序，趣唱无法保证该软件能够正常使用，并对因此给您造成的损失不予负责。</string>
    <string name="downloaded_song">已点歌曲</string>
    <string name="choose_singer">歌星点歌</string>
    <string name="choose_type">分类点歌</string>
    <string name="choose_top">榜单点歌</string>
    <string name="local_work">本地作品</string>
    <string name="play_recently">最近播放</string>
    <string name="play_oratorio">清唱</string>
    <string name="nothing">空空如也,去录制吧!</string>
    <string name="pop_text1">全选</string>
    <string name="pop_text2">删除</string>
    <string name="beautyfilte_text1">滤镜</string>
    <string name="beautyfilter_text2">无</string>
    <string name="beautyfilter_text3">清凉</string>
    <string name="beautyfilter_text4">蓝调</string>
    <string name="beautyfilter_text5">粉嫩</string>
    <string name="beautyfilter_text6">可人</string>
    <string name="beautyfilter_text7">黑白</string>
    <string name="beautyfilter_text8">单色</string>
    <string name="local_request_text1">上传视频要求：</string>
    <string name="local_request_text2">1、文件大小不超过100M；</string>
    <string name="local_request_text3">2、视频时长不超过10分钟；</string>
    <string name="local_request_text4">3、视频内容不得有广告、传播违法内容。</string>
    <string name="local_text">添加本地视频</string>
    <string name="local_preform_text1">重选视频</string>
    <string name="local_preform_text2">暂停</string>
    <string name="local_preform_text3">上传视频</string>
</resources>