<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <include
        android:id="@+id/origin_top"
        layout="@layout/item_top"
        android:layout_width="match_parent"
        android:layout_height="45dp" />

    <RelativeLayout
        android:id="@+id/update_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="30dp"
        android:background="#44000000"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/update_video_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="15dp"
            android:src="@drawable/update_video" />

        <TextView
            android:id="@+id/update_video_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/update_video_image"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="20dp"
            android:textSize="17sp"
            android:text="@string/local_text" />

    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:textSize="16sp"
        android:text="@string/local_request_text1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:textSize="16sp"
        android:text="@string/local_request_text2" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:textSize="16sp"
        android:text="@string/local_request_text3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:textSize="16sp"
        android:text="@string/local_request_text4" />

</LinearLayout>