<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#66000000"
    android:orientation="vertical">

    <HorizontalScrollView
        android:id="@+id/beauty_hsv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/camera_filter_tv"
        android:scrollbars="none"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/beauty_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="15dp">

            <TextView
                android:id="@+id/camera_filter_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:text="@string/beautyfilte_text1"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/lomo_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:text="LOMO"
                android:textColor="@color/app_oher_red"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/origin_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:text="@string/beautyfilter_text2"
                android:textColor="@color/white"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/cool_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:text="@string/beautyfilter_text3"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/blue_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:text="@string/beautyfilter_text4"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/pink_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:text="@string/beautyfilter_text5"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/cute_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:text="@string/beautyfilter_text6"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/white_black_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:text="@string/beautyfilter_text7"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/danse_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:text="@string/beautyfilter_text8"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>