<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/login_top"
        layout="@layout/item_top"
        android:layout_width="match_parent"
        android:layout_height="45dp" />

    <!--音乐悬浮窗-->
    <FrameLayout
        android:id="@+id/top_choose_floating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_top" />

    <RelativeLayout
        android:id="@+id/local_rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top_choose_floating"
        android:layout_above="@+id/ll_edit_bottom"
        android:background="@color/white"
        >

        <ListView
            android:id="@+id/lv_localmusic_mypro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null"
            android:scrollbars="none">

        </ListView>

        <TextView
            android:id="@+id/fragment_works_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawablePadding="10dp"
            android:gravity="center_horizontal"
            android:drawableTop="@mipmap/home_mypk_null"
            android:text="@string/nothing"
            android:visibility="gone" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_edit_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E2E2E2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/select_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pop_text1" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/select_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/pop_delete" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/pop_text2" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
