<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <include
        android:id="@+id/origin_top"
        layout="@layout/item_top"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:visibility="gone" />


    <SurfaceView
        android:id="@+id/preform_surface"
        android:layout_width="match_parent"
        android:layout_height="400dp" />

    <ImageView
        android:id="@+id/local_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/local_back" />


    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/preform_surface"
        android:background="@drawable/ortario_camera_record">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/musicPlaying_sb"
            android:layout_marginTop="60dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/local_repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/local_repeat_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/local_repeat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/local_preform_text1"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/local_play_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/local_play_state_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/local_pause" />

                <TextView
                    android:id="@+id/local_play_state_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/local_preform_text2"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/local_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/local_update_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/local_update" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/local_preform_text3"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

        </LinearLayout>


    </FrameLayout>

    <SeekBar
        android:id="@+id/musicPlaying_sb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/preform_surface"
        android:layout_marginLeft="-15dp"
        android:layout_marginRight="-15dp"
        android:layout_marginTop="-5dp"
        android:background="#0000ff00"
        android:maxHeight="3dp"
        android:minHeight="3dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:progress="0"
        android:progressDrawable="@drawable/bg_seekbar"
        android:secondaryProgress="0"
        android:thumb="@drawable/seekbar_thumb"
        android:thumbOffset="0dp" />

    <TextView
        android:id="@+id/seek_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/musicPlaying_sb"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:text="00:00"
        android:textColor="#ffffff"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/seek_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/musicPlaying_sb"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="10dp"
        android:text="00:00"
        android:textColor="#ffffff"
        android:textSize="12sp" />


</RelativeLayout>